Change some css and head tags in html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             name="description"
             content="This a challenge from to Frontend Mentor."
         />
-        <meta name="theme-color" content="#ffffff" />
+        <meta name="theme-color" content="#5380f9" />
         <meta property="og:site_name" content="Ping coming soon page" />
         <meta property="og:title" content="Ping Coming Soon Page" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="" />
+        <meta property="og:url" content="https://ping-comming-soon-page.netlify.app/" />
         <meta property="og:image" content="https://i.imgur.com/EtfMcje.png" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:image:width" content="720" />
